added some basic UI elements and initial trivia data

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,18 @@
 h1 {
   color: #bed280;
 }
+
+#quiz {
+  display: flex;
+  background-color: #bed280;
+  color: black;
+  flex-direction: column;
+
+  button {
+    width: 120px;
+  }
+}
+
+#quiz.hidden {
+  display: none;
+}
