--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,9 @@
 body {
   overflow: hidden;
+  font-family: "Ubuntu Sans Mono", monospace;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
 }
 
 h1 {
@@ -7,44 +11,47 @@ h1 {
 }
 
 button {
+  font-family: "Ubuntu Sans Mono", monospace;
   z-index: 100;
-  margin: 8px;
+  margin: 12px;
+  border: 1px solid #152e50;
+  min-height: 30px;
+  border-radius: 80px;
 }
 
-#quiz {
+button:hover {
+  background-color: #1a553b;
+  color: white;
+}
+
+.selected-button {
+  background-color: #1a553b;
+  color: white;
+}
+
+.popupItem {
   width: 75%;
-  /* top: 200; */
   position: absolute;
-  /* height: fit-content; */
   border: 1px solid #152e50;
   z-index: 10;
 
   border-radius: 20px;
   padding: 50px;
 
-  /* display: flex; */
   background-color: #bed280;
   color: black;
-  /* flex-direction: column; */
-  /* align-items: center; */
-
-  button {
-    width: 200px;
-  }
-
+}
+#quiz {
   #answers-container {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 75%;
     align-items: center;
   }
 
   #submit-quiz {
-    background-color: aqua;
-  }
-
-  .guessed-button {
-    background-color: yellow;
+    background-color: #c4d6bc;
+    width: 96px;
   }
 
   #answers-screen.hidden {
@@ -60,9 +67,23 @@ button {
     flex-direction: column;
     align-items: center;
   }
+
+  .answer-button {
+    width: 75%;
+  }
 }
 
 #quiz.hidden {
+  display: none;
+}
+
+#choose-type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#choose-type.hidden {
   display: none;
 }
 
@@ -84,4 +105,10 @@ canvas {
   top: 160px;
   left: 0;
   z-index: 0;
+}
+
+.close-button {
+  right: 10px;
+  top: 10px;
+  position: absolute;
 }
