increase inventory when win quiz

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -112,3 +112,12 @@ canvas {
   top: 10px;
   position: absolute;
 }
+
+#ui-container {
+  display: flex;
+}
+
+#my-info {
+  display: flex;
+  flex-direction: column;
+}
