added div with open close for upgrade market

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -121,3 +121,11 @@ canvas {
   display: flex;
   flex-direction: column;
 }
+
+#upgrade-market {
+  display: flex;
+}
+
+#upgrade-market.hidden {
+  display: none;
+}
