upgrade market working, can purchase inventory, can upgrade shop, upgrade multiplier updates inventory sell price

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -124,8 +124,21 @@ canvas {
 
 #upgrade-market {
   display: flex;
+  flex-direction: column;
 }
 
 #upgrade-market.hidden {
   display: none;
+}
+
+.market-choices {
+  display: flex;
+  justify-content: space-between;
+}
+
+.market-choice-button {
+  background-color: antiquewhite;
+  width: 20%;
+  aspect-ratio: 1 / 1; /* height = width */
+  border-radius: 8px;
 }
