--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,18 +1,20 @@
 body {
   overflow: hidden;
-  font-family: "Caveat", cursive;
   font-optical-sizing: auto;
-  /* font-weight: <weight>; */
-  font-size: 20px;
+  margin: 0 12px 0 12px;
+  font-family: "Helvetica Neue", sans-serif;
 }
 
 h1 {
   color: #bed280;
-  margin: 12px;
+  font-size: 70px;
+  font-family: "Darumadrop One", sans-serif;
+  margin: 0 12px 0 12px;
 }
 
 button {
-  font-family: "Caveat", cursive;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: medium;
   z-index: 100;
   margin: 12px;
   min-height: 30px;
@@ -23,12 +25,12 @@ button {
 }
 
 button:hover {
-  background-color: #1a553b;
-  color: white;
+  background-color: #E5E1D5;
+  color: black;
 }
 
 .selected-button {
-  background-color: #1a553b;
+  background-color: #000000;
   color: white;
 }
 
@@ -141,7 +143,7 @@ canvas {
 }
 
 .market-choice-button {
-  background-color: antiquewhite;
+  background-color: #F6F4E7;
   width: 20%;
   aspect-ratio: 1 / 1; /* height = width */
   font-size: 20px;
@@ -150,11 +152,12 @@ canvas {
 
 .ui-button {
   width: 12%;
+  background-color: #F6F4E7;
 }
 
 h2 {
-  font-size: 50px;
-  margin: 10px 0 10px 0;
+  font-size: 40px;
+  margin: 10px 0 30px 0;
   font-weight: 600;
 }
 h4 {
@@ -200,7 +203,7 @@ h4 {
   padding: 0.5em 1em;
   margin: 0;
   border: none;
-  background-color: antiquewhite;
+  background-color: #F6F4E7;
   cursor: pointer;
   font-size: 24px;
   font-weight: 500;
@@ -208,12 +211,12 @@ h4 {
 }
 
 .tab-button.active {
-  background-color: #1a553b;
+  background-color: #000000;
   color: white;
 }
 
 .tab-content{
-  background-color: #1a553b;
+  background-color: #000000;
 }
 
 .tab-content.hidden {
