--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -146,3 +146,22 @@ canvas {
 .ui-button {
   width: 12%;
 }
+
+/* Splash screen styles */
+#splash-animation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000;
+  z-index: 1000;
+}
+
+#splash-animation svg {
+  max-width: 100%;
+  max-height: 100%;
+}
