--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -197,10 +197,18 @@ h4 {
   margin: 30px 0 20px 0;
 }
 
-.market-choice-button .item {
+.market-choice-button .item-label {
   position: absolute;
   top: 0;
+  left: 5px;
   font-weight: 700;
+}
+
+.market-choice-button .item-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .market-choice-button .buy {
