big creature becomes available after dudes are done

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -309,3 +309,8 @@ h4 {
 #upgrade-market-button {
   display: none;
 }
+
+/* this becomes visible in playScene */
+#test-dude-button {
+  display: none;
+}
