--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,19 +18,23 @@ h1 {
 }
 
 button {
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Courier New", Courier, monospace;
   font-weight: medium;
   z-index: 100;
   margin: 12px;
   min-height: 30px;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: none;
   outline: none;
   box-shadow: none;
-  text-transform: uppercase;
 }
 
 button:hover {
-  background-color: #e5e1d5;
+  /* background-color: #e5e1d5; */
+  font-weight: bold;
   color: black;
 }
 
@@ -60,7 +64,7 @@ button:hover {
   #answers-container {
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 75;
     align-items: center;
   }
 
@@ -158,6 +162,7 @@ canvas {
 
 .market-choice-button {
   background-color: #f6f4e7;
+
   width: 20%;
   aspect-ratio: 1 / 1; /* height = width */
   font-size: 20px;
@@ -185,11 +190,15 @@ export const shelfColor = {
 */
 
 .ui-button {
-  width: 12%;
-  background-color: #e8d7bb;
+  width: fit-content;
+  min-width: 80px;
+  display: flex;
+  min-height: 80px;
+  justify-content: flex-end;
+  align-items: center;
   background-color: #f5f1e7;
-  background-image: url("../assets/textures/cardboard-texture.jpg"),
-    url("../assets/textures/white-paper-texture.jpg");
+  /* background-image: url("../assets/textures/cardboard-texture.jpg"),
+    url("../assets/textures/white-paper-texture.jpg"); */
   background-size: cover, cover;
   background-repeat: no-repeat, no-repeat;
   background-position: center, center;
@@ -307,10 +316,36 @@ h4 {
 
 /* this becomes visible in playScene */
 #upgrade-market-button {
+  background-color: inherit;
   display: none;
+}
+.ui-button-icon {
+  width: 100%;
+  height: 80%;
+
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#upgrade-market-button .ui-button-icon {
+  background-image: url("../assets/icons/market_icon.png");
+}
+#upgrade-market-button:hover .ui-button-icon {
+  background-image: url("../assets/icons/market_icon_hover.png");
 }
 
 /* this becomes visible in playScene */
 #test-dude-button {
+  background-color: inherit;
+  width: 40px;
+  height: 100px;
   display: none;
+}
+
+#test-dude-button .ui-button-icon {
+  background-image: url("../assets/icons/unleash_dudes_icon.png");
+}
+#test-dude-button:hover .ui-button-icon {
+  background-image: url("../assets/icons/unleash_dudes_icon_hover.png");
 }
