--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,12 +2,8 @@ body {
   overflow: hidden;
   font-optical-sizing: auto;
   margin: 0 12px 0 12px;
-<<<<<<< HEAD
-  font-family: "Ubuntu Sans Mono", monospace;
-=======
-  font-family: "Helvetica Neue", sans-serif;
+  font-family: "Courier New", Courier, monospace;
   background-color: #f6f2eb;
->>>>>>> origin/main
 }
 
 #js-elements-container {
@@ -23,11 +19,7 @@ h1 {
 }
 
 button {
-<<<<<<< HEAD
-  font-family: "Ubuntu Sans Mono", monospace;
-=======
   font-family: "Courier New", Courier, monospace;
->>>>>>> origin/main
   font-weight: medium;
   z-index: 100;
   margin: 12px;
@@ -42,12 +34,8 @@ button {
 }
 
 button:hover {
-<<<<<<< HEAD
-  background-color: #e8d7bb;
-=======
   /* background-color: #e5e1d5; */
   font-weight: bold;
->>>>>>> origin/main
   color: black;
 }
 
@@ -73,11 +61,7 @@ button:hover {
   #answers-container {
     display: flex;
     flex-direction: column;
-<<<<<<< HEAD
     width: 100%;
-=======
-    width: 75;
->>>>>>> origin/main
     align-items: center;
   }
 
@@ -189,7 +173,7 @@ button:hover {
 }
 
 .shop-type-label {
-  font-family: "Ubuntu Sans Mono", monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -328,26 +312,17 @@ canvas {
 }
 
 .market-choice-button {
-<<<<<<< HEAD
-  background-color: #F8F2DA;
-  padding: 20px 20px 70px 20px;
-  width: 90%;
-=======
   background-color: #f6f4e7;
-
-  width: 20%;
-  aspect-ratio: 1 / 1; /* height = width */
->>>>>>> origin/main
+  width: 90%;
+  padding-bottom: 35px;
   font-size: 20px;
   position: relative;
   border-radius: 10px;
 }
 
 .ui-button {
-<<<<<<< HEAD
   width: 12%;
   background-color: #e8d7bb;
-=======
   width: fit-content;
   min-width: 80px;
   display: flex;
@@ -355,13 +330,10 @@ canvas {
   justify-content: flex-end;
   align-items: center;
   background-color: #f5f1e7;
-  /* background-image: url("../assets/textures/cardboard-texture.jpg"),
-    url("../assets/textures/white-paper-texture.jpg"); */
   background-size: cover, cover;
   background-repeat: no-repeat, no-repeat;
   background-position: center, center;
   background-blend-mode: multiply, color-burn;
->>>>>>> origin/main
 }
 
 h2 {
@@ -385,6 +357,7 @@ h4 {
 
 .market-choice-button .item-label {
   position: absolute;
+  text-transform: uppercase;
   top: 30px;
   left: 50%;
   transform: translateX(-50%);
@@ -395,6 +368,7 @@ h4 {
 
 .market-choice-button .item-image {
   padding-top: 30px;
+  padding-bottom: 20px;
   width: 80%;
   height: 80%;
   border-radius: 10px;
