--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -431,10 +431,10 @@ h4 {
   height: 300px;
 }
 
-.market-choice-upgrade .item{
+.market-choice-upgrade .item {
   position: absolute;
   text-transform: uppercase;
-  top: 30px;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -469,8 +469,8 @@ h4 {
 .market-choice-button .item-image {
   padding-top: 60px;
   padding-bottom: 50px;
-  width: 80%;
-  height: 80%;
+  width: 65%;
+  height: 65%;
   border-radius: 10px;
 }
 
@@ -648,7 +648,7 @@ h4 {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw; /* same as 100% here, but more explicit */
+  width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -689,8 +689,8 @@ h4 {
 /* Applied after Lottie animation is loaded */
 .splash-animation-svg {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   transform: scale(1.2);
   transform-origin: center center;
 }
