--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -58,6 +58,13 @@ button:hover {
 }
 
 #quiz {
+  h1 {
+    margin-top: 0;
+  }
+
+  h4 {
+    padding: 0;
+  }
 
   #answers-container {
     display: flex;
@@ -66,14 +73,13 @@ button:hover {
     align-items: center;
   }
 
-
   .answer-button.selected-button {
     background-color: black;
     color: white;
   }
 
   .correct-answer {
-    border: 2px solid #C6CA42;
+    border: 2px solid #c6ca42;
     pointer-events: none;
   }
 
@@ -82,13 +88,13 @@ button:hover {
   }
 
   .correct-answer.correct-select {
-    background-color: #C6CA42;
+    background-color: #c6ca42;
     color: white;
     pointer-events: none;
   }
 
   .wrong-answer.incorrect-select {
-    background-color: #F26B4E;
+    background-color: #f26b4e;
     color: white;
     pointer-events: none;
   }
@@ -97,27 +103,28 @@ button:hover {
     pointer-events: none;
   }
 
-.coin-message span {
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: -20px;
-}
-img.coin-icon {
-  position: relative;
-  vertical-align: bottom;
-}
+  .coin-message span {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: -20px;
+  }
+  img.coin-icon {
+    position: relative;
+    vertical-align: bottom;
+  }
 
-#submit-quiz, #next-exit-quiz-button {
-  background-color: black;
-  color: white;
-  width: 30%;
-  font-family: "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
-  margin: 20px 0;
-  font-size: 14px;
-  letter-spacing: 0.75ch;
-  padding: 20px 0;
-}
+  #submit-quiz,
+  #next-exit-quiz-button {
+    background-color: black;
+    color: white;
+    width: 30%;
+    font-family: "Helvetica Neue", sans-serif;
+    text-transform: uppercase;
+    margin: 20px 0;
+    font-size: 14px;
+    letter-spacing: 0.75ch;
+    padding: 20px 0;
+  }
 
   #answers-screen.hidden {
     display: none;
@@ -127,7 +134,8 @@ img.coin-icon {
     display: none;
   }
 
-  #questions-screen, #answers-screen {
+  #questions-screen,
+  #answers-screen {
     padding: 0 2rem;
     display: flex;
     flex-direction: column;
@@ -142,12 +150,13 @@ img.coin-icon {
     font-size: 20px;
     padding: 20px 0;
     border-radius: 10px;
-    background-color: #F2EBDC;
+    background-color: #f2ebdc;
     color: black;
     margin: 20px 0;
   }
 
-  .correct-answer, .wrong-answer {
+  .correct-answer,
+  .wrong-answer {
     width: 100%;
     font-size: 20px;
     padding: 20px 0;
@@ -158,7 +167,6 @@ img.coin-icon {
     background-color: snow;
     border: 1px solid black;
   }
-
 }
 
 #quiz.hidden {
@@ -379,7 +387,8 @@ canvas {
   gap: 10px 5px 5px 5px;
 }
 
-.market-choice-button, .market-choice-upgrade {
+.market-choice-button,
+.market-choice-upgrade {
   position: relative;
   background-color: #f6f4e7;
   width: 90%;
@@ -476,7 +485,7 @@ h4 {
 }
 
 .market-choice-button:hover {
-  background-color: #F2EBDC;
+  background-color: #f2ebdc;
 }
 
 .market-choice-button .item-label {
