--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -768,6 +768,8 @@ h4 {
 
   p {
     border: black 1px solid;
+    border-radius: 10px;
     padding: 40px;
+    background-color: #f2ebdc;
   }
 }
