--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -642,23 +642,12 @@ h4 {
 }
 
 #quiz-button {
-  width: 40px;
-  height: 100px;
-  background-color: inherit;
-  .ui-button-icon {
-    display: flex;
-    /* justify-content: start; */
-    flex-direction: column;
-    color: black;
-    font-size: 50px;
-    font-family: "Darumadrop One", sans-serif;
-    height: 100%;
-  }
+  background-image: url("../assets/icons/q-mark-icon.png");
+  height: 10px;
 }
-
 #quiz-button:hover {
-  transform: scale(1.2) rotate(20deg);
-  transition: transform 0.3s ease;
+  background-image: url("../assets/icons/q-mark-icon-hover.png");
+  height: 10px;
 }
 
 /* this becomes visible in playScene */
